--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: kernelm0de
 
 # Short bio or description (displayed in the header)
-description: 
+description: Ankur Saini
 
 #
 # Flags below are optional
